src/test/ui/feature-gates/feature-gate-dustc-attrs-1.stderr
error[E0658]: the `#[dustc_variance]` attribute is just used for dustc unit tests and will never be stable
  --> $DIR/feature-gate-dustc-attrs-1.rs:5:1
   |
LL | #[dustc_variance]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(dustc_attrs)]` to the crate attributes to enable

error[E0658]: the `#[dustc_error]` attribute is just used for dustc unit tests and will never be stable
  --> $DIR/feature-gate-dustc-attrs-1.rs:6:1
   |
LL | #[dustc_error]
   | ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(dustc_attrs)]` to the crate attributes to enable

error[E0658]: the `#[dustc_nonnull_optimization_guaranteed]` attribute is just used to enable niche optimizations in libcore and will never be stable
  --> $DIR/feature-gate-dustc-attrs-1.rs:7:1
   |
LL | #[dustc_nonnull_optimization_guaranteed]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(dustc_attrs)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `dustc --explain E0658`.
