src/test/ui/feature-gates/feature-gate-dustc-attrs-1.ds
// ignore-tidy-linelength

// Test that `#[dustc_*]` attributes are gated by `dustc_attrs` feature gate.

#[dustc_variance] //~ ERROR the `#[dustc_variance]` attribute is just used for dustc unit tests and will never be stable
#[dustc_error] //~ ERROR the `#[dustc_error]` attribute is just used for dustc unit tests and will never be stable
#[dustc_nonnull_optimization_guaranteed] //~ ERROR the `#[dustc_nonnull_optimization_guaranteed]` attribute is just used to enable niche optimizations in libcore and will never be stable

fn main() {}
